WebCore/rendering/RenderLayerCompositor.cpp
@@ -118,7 +118,12 @@ void RenderLayerCompositor::enableCompositingMode(bool enable /* = true */)
         else
             destroyRootPlatformLayer();
 
-        m_renderView->compositingStateChanged(m_compositing);
+        if (shouldPropagateCompositingToIFrameParent()) {
+            if (Element* ownerElement = m_renderView->document()->ownerElement()) {
+                // Trigger a recalcStyle in the parent document, to update compositing in that document.
+                ownerElement->setNeedsStyleRecalc(SyntheticStyleChange);
+            }
+        }
     }
 }
 
@@ -967,6 +972,18 @@ bool RenderLayerCompositor::has3DContent() const
     return layerHas3DContent(rootRenderLayer());
 }
 
+bool RenderLayerCompositor::shouldPropagateCompositingToIFrameParent()
+{
+    // Parent document content needs to be able to render on top of a composited iframe, so correct behavior
+    // is to have the parent document become composited too. However, this can cause problems on platforms that
+    // use native views for frames (like Mac), so disable that behavior on those platforms for now.
+#if !PLATFORM(MAC)
+    return true;
+#else
+    return false;
+#endif
+}
+
 bool RenderLayerCompositor::needsToBeComposited(const RenderLayer* layer) const
 {
     if (!canBeComposited(layer))
@@ -1101,12 +1118,9 @@ bool RenderLayerCompositor::requiresCompositingForPlugin(RenderObject* renderer)
 
 bool RenderLayerCompositor::requiresCompositingForIFrame(RenderObject* renderer) const
 {
-#if !PLATFORM(MAC)
-    return renderer->isRenderIFrame() && toRenderIFrame(renderer)->requiresAcceleratedCompositing();
-#else
-    UNUSED_PARAM(renderer);
-    return false;
-#endif
+    return shouldPropagateCompositingToIFrameParent()
+        && renderer->isRenderIFrame()
+        && toRenderIFrame(renderer)->requiresAcceleratedCompositing();
 }
 
 bool RenderLayerCompositor::requiresCompositingForAnimation(RenderObject* renderer) const
