WebCore/rendering/RenderLayerCompositor.h
@@ -136,6 +136,10 @@ public:
     // Walk the tree looking for layers with 3d transforms. Useful in case you need
     // to know if there is non-affine content, e.g. for drawing into an image.
     bool has3DContent() const;
+    
+    // Some platforms may wish to connect compositing layer trees between iframes and
+    // their parent document.
+    static bool shouldPropagateCompositingToIFrameParent();
 
 private:
     // Whether the given RL needs a compositing layer.
